improved client, bugfixes

--- a/chess/client/src/main/webapp/private/sandbox.html
+++ b/chess/client/src/main/webapp/private/sandbox.html
@@ -32,6 +32,7 @@
         <script src="./match/MatchController.js" type="text/javascript" charset="UTF-8" defer></script>
         <script src="./match/MatchesController.js" type="text/javascript" charset="UTF-8" defer></script>
         <script src="./match/MatchRequestsController.js" type="text/javascript" charset="UTF-8" defer></script>
+        <script src="./match/MatchRequestModel.js" type="text/javascript" charset="UTF-8" defer></script>
         <script src="./message/MessageModel.js" type="text/javascript" charset="UTF-8" defer></script>
         <script src="./message/MessageController.js" type="text/javascript" charset="UTF-8" defer></script>
         <script src="./EventService.js" type="text/javascript" charset="UTF-8" defer></script>
