added hacky move history

--- a/chess/client/src/main/webapp/private/sandbox.html
+++ b/chess/client/src/main/webapp/private/sandbox.html
@@ -50,6 +50,6 @@
         <div id="playerDetails" class="container"></div>
         <div id="requestList" class="container"></div>
         <div id="matchList" class="container"></div>
-        <div id="matchContainer" class="container"></div>
+        <span id="matchContainer" class="container"></span>
     </body>
 </html>
